# clrnds-blog

./: .gitignore  Main.hs  Makefile  README.md  blog.cabal  new_post.sh  stack.yaml
css/: default.css  syntax.css
files/: argentina-topo.json  dr-who-ratings.json  equipos-geo.json  provincias-topo.json
files/butterfly-temp/: 1992.csv  earth.json  main.js  styles.css
js/: dr-who-ratings.js  provincias-voronoi.js
posts/: 2015-05-07-primera-division-voronoi.md  2015-08-21-profiling-a-haskell-space-leak.md  2015-11-23-tateti-tateti.md  2016-03-15-dr-who-imdb-ratings.md  2017-04-21-the-water-jug-problem-in-hedgehog.md  2017-07-14-a-temperature-map.md  2017-12-10-sorting-pixels-in-rust.md  2018-01-26-wave2blofeld-building-a-midi-thing-in-c.md  2018-07-13-la-sombra-de-las-calles-probando-osmnx.md
templates/: base.html  index.html  post.html  postitem.html
