name:                blog
version:             0.1.0.0
license-file:        LICENSE
author:              Ezequiel Alvarez
maintainer:          welcometothechango@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             Main.hs
  build-depends:
      base >=4.7 && <4.8,
      text,
      hakyll >=4.3
  default-language:    Haskell2010
