name:                blog
version:             0.1.0.0
license-file:        LICENSE
author:              Ezequiel Alvarez
maintainer:          welcometothechango@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             Main.hs
  build-depends:        base >=4.7 && <5
                      , text
                      , pandoc
                      , containers
                      , hakyll
                      , skylighting
  default-language:    Haskell2010
